Colors added to the final divs

--- a/index.html
+++ b/index.html
@@ -59,20 +59,8 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline">
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline greenhome"></div>
+            <div class="vline greenhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -84,19 +72,7 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline">
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline greenhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -108,19 +84,7 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline">
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline greenhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -132,7 +96,55 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
+            <div class="vline greenhome"></div>
             <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+        </div>
+         <div class="row hline redhome">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline greenhome"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+        </div>
+         <div class="row hline redhome">
+            <div class="vline bluehome"></div>
+            <div class="vline bluehome"></div>
+            <div class="vline bluehome"></div>
+            <div class="vline bluehome"></div>
+            <div class="vline bluehome"></div>
+            <div class="vline"></div>
+            <div class="vline redhome"></div>
+            <div class="vline redhome"></div>
+            <div class="vline redhome"></div>
+            <div class="vline redhome"></div>
+        </div>
+         <div class="row hline">
+            <div class="vline bluehome"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline yellowhome"></div>
+            <div class="vline "></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+        </div>
+         <div class="row hline">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline yellowhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -144,19 +156,7 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline">
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline yellowhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -168,7 +168,7 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline yellowhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -180,8 +180,8 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline yellowhome"></div>
+            <div class="vline yellowhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
