--- a/index.html
+++ b/index.html
@@ -54,31 +54,22 @@
                 </div>
             </div>
         </div>      
-        <div class="row hline">
+        <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline greenhome"></div>
-            <div class="vline greenhome"></div>
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
         </div>
-         <div class="row hline">
+         <div class="row hline p-0 m-0">
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline greenhome"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline">
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -89,8 +80,24 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
+            <div class="vline"></div>
         </div>
-         <div class="row hline">
+         <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline greenhome"></div>
+            <div class="vline greenhome"></div>
+            <div class="vline safespace"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+        </div>
+         <div class="row hline p-0 m-0">
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -101,8 +108,10 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
+            <div class="vline"></div>
         </div>
-         <div class="row hline redhome">
+         <div class="row hline redhome p-0 m-0">
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -113,8 +122,24 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
+            <div class="vline"></div>
         </div>
-         <div class="row hline redhome">
+         <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline safespace"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline greenhome"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline redhome"></div>
+            <div class="vline"></div>
+        </div>
+         <div class="row hline redhome p-0 m-0">
+            <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
@@ -125,63 +150,88 @@
             <div class="vline redhome"></div>
             <div class="vline redhome"></div>
             <div class="vline redhome"></div>
+            <div class="vline redhome"></div> 
         </div>
-         <div class="row hline">
+         <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
             <div class="vline bluehome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
             <div class="vline yellowhome"></div>
-            <div class="vline "></div>
             <div class="vline"></div>
             <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline safespace"></div>
             <div class="vline"></div>
         </div>
-         <div class="row hline">
+         <div class="row hline p-0 m-0">
             <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline yellowhome"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline">
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline yellowhome"></div>
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
         </div>
-         <div class="row hline">
+         <div class="row hline p-0 m-0">
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline yellowhome"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+        </div>
+        <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline safespace"></div>
+            <div class="vline yellowhome"></div>
             <div class="vline yellowhome"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
         </div>
-        <div class="row hline">
+        <div class="row hline p-0 m-0">
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline yellowhome"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+        </div>
+        <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
             <div class="vline yellowhome"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
