--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <span id="blueToken"></span>
     <div class="d-block d-sm-none container-fluid board">
         <div class="home green">
             <div class="row m-0 p-0">
