Token size and position tested

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 </head>
 <body>
-    <span id="blueToken"></span>
     <div class="d-block d-sm-none container-fluid board">
+    <span id="blueTokenOne"></span>
+    <span id="blueTokenTwo"></span>
+    <span id="blueTokenThree"></span>
         <div class="home green">
             <div class="row m-0 p-0">
                 <div class="col-6 token-home-wrapper p-0">
