Added numbers to board spaces

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <span id="blueTokenOne"></span>
     <span id="blueTokenTwo"></span>
     <span id="blueTokenThree"></span>
+    <span id="blueTokenFour"></span>
         <div class="home green">
             <div class="row m-0 p-0">
                 <div class="col-6 token-home-wrapper p-0">
@@ -63,9 +64,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">35</div>
             <div class="vline greenhome"></div>
-            <div class="vline"></div>
+            <div class="vline">32</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -77,9 +78,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">36</div>
             <div class="vline greenhome"></div>
-            <div class="vline"></div>
+            <div class="vline">31</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -105,9 +106,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">38</div>
             <div class="vline greenhome"></div>
-            <div class="vline"></div>
+            <div class="vline">29</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -119,27 +120,28 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">37</div>
             <div class="vline greenhome"></div>
-            <div class="vline"></div>
+            <div class="vline">28</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
         </div>
          <div class="row hline p-0 m-0">
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">45</div>
+            <div class="vline">44</div>
             <div class="vline safespace"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">42</div>
+            <div class="vline">41</div>
+            <div class="vline">40</div>
             <div class="vline greenhome"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">27</div>
+            <div class="vline">26</div>
+            <div class="vline">25</div>
             <div class="vline redhome"></div>
-            <div class="vline"></div>
+            <div class="vline">23</div>
+            <div>22</div>
         </div>
          <div class="row hline redhome p-0 m-0">
             <div class="vline bluehome"></div>
@@ -156,17 +158,32 @@
             <div class="vline redhome"></div> 
         </div>
          <div class="row hline p-0 m-0">
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">47</div>
+            <div class="vline">48</div>
             <div class="vline bluehome"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">2</div>
+            <div class="vline">3</div>
+            <div class="vline">4</div>
             <div class="vline yellowhome"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">15</div>
+            <div class="vline">16</div>
+            <div class="vline">17</div>
             <div class="vline safespace"></div>
+            <div class="vline">19</div>
+            <div>20</div>
+        </div>
+         <div class="row hline p-0 m-0">
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline">5</div>
+            <div class="vline yellowhome"></div>
+            <div class="vline">14</div>
+            <div class="vline"></div>
+            <div class="vline"></div>
+            <div class="vline"></div>
             <div class="vline"></div>
         </div>
          <div class="row hline p-0 m-0">
@@ -175,23 +192,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">6</div>
             <div class="vline yellowhome"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-        </div>
-         <div class="row hline p-0 m-0">
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline"></div>
-            <div class="vline yellowhome"></div>
-            <div class="vline"></div>
+            <div class="vline">13</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -217,9 +220,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">7</div>
             <div class="vline yellowhome"></div>
-            <div class="vline"></div>
+            <div class="vline">11</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -231,9 +234,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline"></div>
+            <div class="vline">8</div>
             <div class="vline yellowhome"></div>
-            <div class="vline"></div>
+            <div class="vline">10</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
