--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Ludo Mania</title>
 
 </head>
 <body>
     <div class="d-block d-sm-none container-fluid board">
     <span id="blueTokenOne"></span>
-    <span id="blueTokenTwo"></span>
-    <span id="blueTokenThree"></span>
+    <!--  <span id="blueTokenTwo"></span> -->
+    <!--  <span id="blueTokenThree"></span> -->
     <span id="blueTokenFour"></span>
         <div class="home green">
             <div class="row m-0 p-0">
@@ -66,7 +67,7 @@
             <div class="vline"></div>
             <div class="vline">35</div>
             <div class="vline greenhome"></div>
-            <div class="vline">32</div>
+            <div class="vline">33</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -80,7 +81,7 @@
             <div class="vline"></div>
             <div class="vline">36</div>
             <div class="vline greenhome"></div>
-            <div class="vline">31</div>
+            <div class="vline">32</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -108,7 +109,7 @@
             <div class="vline"></div>
             <div class="vline">38</div>
             <div class="vline greenhome"></div>
-            <div class="vline">29</div>
+            <div class="vline">30</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -120,9 +121,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline">37</div>
+            <div class="vline">39</div>
             <div class="vline greenhome"></div>
-            <div class="vline">28</div>
+            <div class="vline">29</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -136,12 +137,12 @@
             <div class="vline">41</div>
             <div class="vline">40</div>
             <div class="vline greenhome"></div>
+            <div class="vline">28</div>
             <div class="vline">27</div>
             <div class="vline">26</div>
-            <div class="vline">25</div>
             <div class="vline redhome"></div>
-            <div class="vline">23</div>
-            <div>22</div>
+            <div class="vline">24</div>
+            <div>23</div>
         </div>
          <div class="row hline redhome p-0 m-0">
             <div class="vline bluehome"></div>
@@ -165,12 +166,12 @@
             <div class="vline">3</div>
             <div class="vline">4</div>
             <div class="vline yellowhome"></div>
-            <div class="vline">15</div>
             <div class="vline">16</div>
             <div class="vline">17</div>
+            <div class="vline">18</div>
             <div class="vline safespace"></div>
-            <div class="vline">19</div>
-            <div>20</div>
+            <div class="vline">20</div>
+            <div>21</div>
         </div>
          <div class="row hline p-0 m-0">
             <div class="vline"></div>
@@ -180,7 +181,7 @@
             <div class="vline"></div>
             <div class="vline">5</div>
             <div class="vline yellowhome"></div>
-            <div class="vline">14</div>
+            <div class="vline">15</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -194,7 +195,7 @@
             <div class="vline"></div>
             <div class="vline">6</div>
             <div class="vline yellowhome"></div>
-            <div class="vline">13</div>
+            <div class="vline">14</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -220,9 +221,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline">7</div>
+            <div class="vline">8</div>
             <div class="vline yellowhome"></div>
-            <div class="vline">11</div>
+            <div class="vline">12</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
@@ -234,9 +235,9 @@
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
-            <div class="vline">8</div>
+            <div class="vline">9</div>
             <div class="vline yellowhome"></div>
-            <div class="vline">10</div>
+            <div class="vline">11</div>
             <div class="vline"></div>
             <div class="vline"></div>
             <div class="vline"></div>
