Cumulative position tested

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="d-block d-sm-none container-fluid board">
     <span id="blueTokenOne"></span>
-    <!--  <span id="blueTokenTwo"></span> -->
+    <span id="blueTokenTwo"></span>
     <!--  <span id="blueTokenThree"></span> -->
     <span id="blueTokenFour"></span>
         <div class="home green">
