Renamed index.html to board.html

--- a/board.html
+++ b/board.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="d-block d-sm-none container-fluid board">
+    <div class="container-fluid board">
     <span id="blueTokenOne"></span>
     <span id="blueTokenTwo"></span>
     <!--  <span id="blueTokenThree"></span> -->
