Testing number of players localStorage function

--- a/board.html
+++ b/board.html
@@ -10,6 +10,10 @@
 
 </head>
 <body>
+    <span class="container-fluid select">
+        <button  id="numPlayersTwo">2</button>
+        <button  id="numPlayersFour">4</button>
+    </span>
     <div class="container-fluid board">
     <span id="blueTokenOne"></span>
     <span id="blueTokenTwo"></span>
@@ -151,7 +155,7 @@
             <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
-            <div class="vline"></div>
+            <div class="vline"><span id="numplayers"></span></div>
             <div class="vline redhome"></div>
             <div class="vline redhome"></div>
             <div class="vline redhome"></div>
