Number of players localstorage tested, First dice function tested

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <button  id="numPlayersTwo">
-        <!--<a href="board.html">2</a>-->
+        <a href="board.html">2</a>
     </button>
     <button  id="numPlayersFour">
         <a href="board.html">4</a>
