--- a/board.html
+++ b/board.html
@@ -10,10 +10,6 @@
 
 </head>
 <body>
-    <span class="container-fluid select">
-        <button  id="numPlayersTwo">2</button>
-        <button  id="numPlayersFour">4</button>
-    </span>
     <div class="container-fluid board">
     <span id="blueTokenOne"></span>
     <span id="blueTokenTwo"></span>
@@ -291,8 +287,10 @@
                 </div>
             </div>
         </div>
-        
+        <div id="firstdice"></div>
+        <div id="bluedice"></div>
     </div>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
