Testing dice: Added bluedice, set sum in localstorage, retrive result in another function using localstorage to move token

--- a/board.html
+++ b/board.html
@@ -14,51 +14,7 @@
     <span id="blueTokenOne"></span>
     <span id="blueTokenTwo"></span>
     <!--  <span id="blueTokenThree"></span> -->
-    <span id="blueTokenFour"></span>
-        <div class="home green">
-            <div class="row m-0 p-0">
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-            </div>
-            <div class="row m-0 p-0">
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="home red">
-            <div class="row m-0 p-0">
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-            </div>
-            <div class="row m-0 p-0">
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-                <div class="col-6 token-home-wrapper p-0">
-                    <div class="token-home">
-                    </div>
-                </div>
-            </div>
-        </div>      
+    <span id="blueTokenFour"></span>    
         <div class="row hline p-0 m-0">
             <div class="vline"></div>
             <div class="vline"></div>
@@ -287,8 +243,57 @@
                 </div>
             </div>
         </div>
+        <div class="home green">
+            <div class="row m-0 p-0">
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0 p-0">
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="home red">
+            <div class="row m-0 p-0">
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0 p-0">
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+                <div class="col-6 token-home-wrapper p-0">
+                    <div class="token-home">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="firstdice"></div>
-        <div id="bluedice"></div>
+        <div id="bluedice">
+            <div id="bluediceone">
+            </div>
+            <div id="bluedicetwo">
+            </div>
+        </div>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
