changed dice result to global variable to be called in a function

--- a/board.html
+++ b/board.html
@@ -107,7 +107,7 @@
             <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
             <div class="vline bluehome"></div>
-            <div class="vline"><span id="numplayers"></span></div>
+            <div class="vline"></div>
             <div class="vline redhome"></div>
             <div class="vline redhome"></div>
             <div class="vline redhome"></div>
