Added dice result in front of a token (ie blueTokenTwo)

--- a/board.html
+++ b/board.html
@@ -13,6 +13,10 @@
     <div class="container-fluid board">
     <span id="blueTokenOne"></span>
     <span id="blueTokenTwo"></span>
+    <div id="dicewrapper">
+        <p id="blueTokenTwoDieOne" class="DieLeft dice"></p>
+        <p id="blueTokenTwoDieTwo" class="DieTwo dice"></p>
+    </div>
     <!--  <span id="blueTokenThree"></span> -->
     <span id="blueTokenFour"></span>    
         <div class="row hline p-0 m-0">
