--- a/board.html
+++ b/board.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <div class="container-fluid">
-        <span id="blueTokenOne"></span>
-        <span id="blueTokenTwo"></span>  
+        
         <div class="board">
+        <span id="start" class="text-center">START</span> 
+        <span id="blueTokenOne"></span>
+        <span id="blueTokenTwo"></span>
             <div class="row hline p-0 m-0">
                 <div class="vline"></div>
                 <div class="vline"></div>
