Draw result fixed

--- a/board.html
+++ b/board.html
@@ -16,7 +16,8 @@
         <span id="start" class="text-center">START</span> 
         <span id="blueTokenOne"></span>
         <span id="blueTokenTwo"></span>
-            <div class="row hline p-0 m-0">
+        <span id="Token">a</span>
+                <div class="row hline p-0 m-0">
                 <div class="vline"></div>
                 <div class="vline"></div>
                 <div class="vline"></div>
