--- a/board.html
+++ b/board.html
@@ -14,9 +14,7 @@
         
         <div class="board">
         <span id="start" class="text-center">START</span> 
-        <span id="blueTokenOne"></span>
-        <span id="blueTokenTwo"></span>
-        <span id="Token">a</span>
+        <span id="blueTokenOne"><div id="tokenwrapper"><div id="tokenblue"></div></div></span>
                 <div class="row hline p-0 m-0">
                 <div class="vline"></div>
                 <div class="vline"></div>
