Four blue tokens initial position set

--- a/board.html
+++ b/board.html
@@ -14,7 +14,10 @@
         
         <div class="board">
         <span id="start" class="text-center">START</span> 
-        <span id="blueTokenOne"><div id="tokenwrapper"><div id="tokenblue"></div></div></span>
+        <span id="blueTokenOne"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenTwo"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenThree"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenFour"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
                 <div class="row hline p-0 m-0">
                 <div class="vline"></div>
                 <div class="vline"></div>
