Layer created, in front of  layer: buttons active, no need for method .off(click)

--- a/board.html
+++ b/board.html
@@ -12,8 +12,10 @@
 <body>
     <div class="container-fluid">
         
-        <div class="board">
-        <span id="start" class="text-center">START</span> 
+        <div class="board" >
+        <span id="layer" class="text-center">Layer</span> 
+        <span id="start" class="text-center">START</span>
+        
         <span id="blueTokenOne"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
         <span id="blueTokenTwo"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
         <span id="blueTokenThree"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
