Added four tokens to the board

--- a/board.html
+++ b/board.html
@@ -16,10 +16,26 @@
         <span id="layer" class="text-center">Layer</span> 
         <span id="start" class="text-center">START</span>
         
-        <span id="blueTokenOne"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
-        <span id="blueTokenTwo"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
-        <span id="blueTokenThree"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
-        <span id="blueTokenFour"><div class="tokenwrapper"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenOne"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenTwo"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenThree"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
+        <span id="blueTokenFour"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
+
+        <span id="yellowTokenOne"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
+        <span id="yellowTokenTwo"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
+        <span id="yellowTokenThree"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
+        <span id="yellowTokenFour"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
+
+        <span id="redTokenOne"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
+        <span id="redTokenTwo"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
+        <span id="redTokenThree"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
+        <span id="redTokenFour"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
+
+        <span id="greenTokenOne"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
+        <span id="greenTokenTwo"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
+        <span id="greenTokenThree"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
+        <span id="greenTokenFour"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
+
                 <div class="row hline p-0 m-0">
                 <div class="vline"></div>
                 <div class="vline"></div>
