Added logo div and action buttons to start div

--- a/board.html
+++ b/board.html
@@ -13,28 +13,36 @@
     <div class="container-fluid">
         
         <div class="board" >
-        <span id="layer" class="text-center">Layer</span> 
-        <span id="start" class="text-center">START</span>
+        <span id="layer" class="text-center"></span> 
+        <div id="start">
+            <span class="settings">G</span>
+            <span class="exit">E</span>
+            <div class="logo">LOGO</div>
+            <div>
+                <div id="play"><button class="initbtn" >PLAY</button></div>
+                <div id="rules"><button class="initbtn">Game Rules</button></div>
+            </div>
+        </div>
         
-        <span id="blueTokenOne"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
-        <span id="blueTokenTwo"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
-        <span id="blueTokenThree"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
-        <span id="blueTokenFour"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></span>
+        <div id="blueTokenOne"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
+        <div id="blueTokenTwo"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
+        <div id="blueTokenThree"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
+        <div id="blueTokenFour"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
 
-        <span id="yellowTokenOne"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
-        <span id="yellowTokenTwo"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
-        <span id="yellowTokenThree"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
-        <span id="yellowTokenFour"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></span>
+        <div id="yellowTokenOne"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
+        <div id="yellowTokenTwo"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
+        <div id="yellowTokenThree"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
+        <div id="yellowTokenFour"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
 
-        <span id="redTokenOne"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
-        <span id="redTokenTwo"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
-        <span id="redTokenThree"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
-        <span id="redTokenFour"><div class="tokenwrapperred"><div class="tokenred"></div></div></span>
+        <div id="redTokenOne"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
+        <div id="redTokenTwo"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
+        <div id="redTokenThree"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
+        <div id="redTokenFour"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
 
-        <span id="greenTokenOne"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
-        <span id="greenTokenTwo"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
-        <span id="greenTokenThree"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
-        <span id="greenTokenFour"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></span>
+        <div id="greenTokenOne"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
+        <div id="greenTokenTwo"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
+        <div id="greenTokenThree"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
+        <div id="greenTokenFour"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
 
                 <div class="row hline p-0 m-0">
                 <div class="vline"></div>
