Changed function whostarts activation => button play

--- a/board.html
+++ b/board.html
@@ -10,10 +10,8 @@
 
 </head>
 <body>
+    <div class="mainlayer"></div>
     <div class="container-fluid">
-        
-        <div class="board" >
-        <span id="layer" class="text-center"></span> 
         <div id="start">
             <span class="settings">G</span>
             <span class="exit">E</span>
@@ -23,7 +21,8 @@
                 <div id="rules"><button class="initbtn">Game Rules</button></div>
             </div>
         </div>
-        
+        <div class="board" >
+        <div id="layer" class="text-center"></div> 
         <div id="blueTokenOne"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
         <div id="blueTokenTwo"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
         <div id="blueTokenThree"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
