Created choosetoken options tokenchose functions to determine which token will move => testing with tokenOne id

--- a/board.html
+++ b/board.html
@@ -340,6 +340,7 @@
                 <div id="greendicetwo">
                 </div>
             </div>
+            <div id="dicewrapper"></div>
         </div>
     </div>
     
