Function options and looping tested, dicewrapper added and styled when token is chosen with the dice results

--- a/board.html
+++ b/board.html
@@ -340,7 +340,10 @@
                 <div id="greendicetwo">
                 </div>
             </div>
-            <div id="dicewrapper"></div>
+            <div id="dicewrapper">
+                <div id="dicemoveone" class="text-center">12</div>
+                <div id="dicemovetwo" class="text-center">1</div>
+            </div>
         </div>
     </div>
     
