Code screen, new file ludogame.js to structure the code better and fix bugs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <span class="settings">G</span>
             <span class="exit">E</span>
             <div class="logo">LOGO</div>
+            <button id="players2">2</button>
+            <button id="players4">4</button>
             <div>
                 <div id="play"><button class="initbtn" >PLAY</button></div>
                 <div id="rules"><button class="initbtn">Game Rules</button></div>
