Added function to choose number of players and if a specific color is a bot or human

--- a/index.html
+++ b/index.html
@@ -17,8 +17,29 @@
             <span class="settings">G</span>
             <span class="exit">E</span>
             <div class="logo">LOGO</div>
-            <button id="players2">2</button>
-            <button id="players4">4</button>
+            #Players:    
+            <input type="checkbox" id="myCheck">2   
+            <input type="checkbox" id="myChecktwo" checked>4
+            <div>
+                Blue:
+                <input type="checkbox" id="bluehuman" checked>Human   
+                <input type="checkbox" id="bluebot">Bot
+            </div>
+            <div>
+                Yellow:
+                <input type="checkbox" id="yellowhuman" checked>Human   
+                <input type="checkbox" id="yellowbot">Bot
+            </div>
+            <div>
+                Red:
+                <input type="checkbox" id="redhuman" checked>Human   
+                <input type="checkbox" id="redbot">Bot
+            </div>
+            <div>
+                Green:
+                <input type="checkbox" id="greenhuman" checked>Human   
+                <input type="checkbox" id="greenbot">Bot
+            </div>
             <div>
                 <div id="play"><button class="initbtn" >PLAY</button></div>
                 <div id="rules"><button class="initbtn">Game Rules</button></div>
